--- a/gulimall-third-party/src/main/resources/application.yml
+++ b/gulimall-third-party/src/main/resources/application.yml
@@ -4,15 +4,15 @@ spring:
       discovery:
         server-addr: localhost:8848
     alicloud:
-      access-key: LTAI5tLQz8VbhoLdD1yC1xgX
-      secret-key: oJGjcmguXdw6B8s0Uzq0pRNJmnl8Wx
+      access-key: 
+      secret-key: 
       oss:
-        endpoint: oss-cn-nanjing.aliyuncs.com
-        bucket: gulimall-zyj0410
+        endpoint: 
+        bucket: 
       sms:
-        host: https://dfsns.market.alicloudapi.com
-        path: /data/send_sms
-        appcode: a67f90dafde34a1081b02b36e4a1a326
+        host: 
+        path: 
+        appcode: 
   application:
     name: gulimall-third-party
 server:
